# mirai-agent

./: .autonomy_probe  .dockerignore  .env.demo  .env.example  .env.production  .env.template  .gitignore  .pre-commit-config.yaml  =1.0.0  =20.0  AGENT_READY.md  AI_DEPLOYMENT_FINAL_REPORT.md  AUTONOMOUS_DEPLOYMENT_REPORT.md  CLEANUP_REPORT.md  COMPONENT_TESTING_REPORT.md  COMPREHENSIVE_DEVELOPMENT_PLAN.md  DAY1_SECURITY_COMPLETE.md  DAY2_TRADING_STRATEGIES_COMPLETE.md  DAYS_3-7_DEPLOYMENT_REPORT.md  DEPLOYMENT.md  DEPLOYMENT_INSTRUCTIONS.md  DEPLOYMENT_STATUS.md  DEPLOY_INFO.json  DEVELOPMENT_ROADMAP_7_DAYS.md  DOMAIN_DEPLOYMENT_READY.md  Dockerfile  Dockerfile.base  Dockerfile.ecosystem  Dockerfile.web  FULL_STACK_FUNCTIONALITY_REPORT.md  MANUAL_TASKS.md  MINIMAL_AUTONOMY.md  Makefile  PLATFORM_ENHANCEMENTS_COMPLETION_REPORT.md  PRODUCTION_DEPLOYMENT_REPORT.md  PROJECT_STATUS_REPORT.md  PROJECT_STATUS_REPORT_NIGHT_OPS.md  README.md  README_Deploy.md  SERVICES_RUNNING.md  (+46 more)
app/api/: Dockerfile  __init__.py  ai_endpoints.py  pyproject.toml  test-ghcr-user.md  test-ghcr.md
app/api/mirai_api/: admin_routes.py  auth.py  auth_routes.py  blog_routes.py  emergency_routes.py  integration_routes.py  main.py  (+7 more)
app/trader/: Dockerfile  __init__.py  adaptive_strategies.py  advanced_risk_engine.py  agent_loop.py  ai_safety_layers.py  analytics_48h.py  async_loop.py  binance_client.py  binance_realtime.py  broker_connectors.py  exchange_info.py  optimized_client.py  orders.py  portfolio_management.py  pyproject.toml  risk_engine.py  strategy_risk_integration.py  test_ai_safety.py
(+679 files in other folders)
