[project]
name = "mirai-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["fastapi>=0.111.0","uvicorn>=0.30.0"]
[project.optional-dependencies]
dev = ["pytest>=8.2.0","httpx>=0.27.0","ruff>=0.5.0","mypy>=1.10.0"]
[tool.ruff]
line-length = 100
select = ["E","F","I"]
[tool.setuptools.package-data]
"mirai_api" = ["py.typed"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true