[project]
name = "mirai-trader"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = ["pyyaml>=6.0", "binance-connector>=3.8.1"]
[project.optional-dependencies]
dev = ["pytest>=8.2.0","ruff>=0.5.0","mypy>=1.10.0","types-PyYAML>=6.0"]
[tool.ruff]
line-length = 120
[tool.ruff.lint]
select = ["E","F","I"]
[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true